feat: -loader -dark mode finished
fix: -css

to come: responsive

--- a/mon-portfolio/public/projects.json
+++ b/mon-portfolio/public/projects.json
@@ -1,28 +1,29 @@
 {
-    "projects": [
-      {
-        "name": "Moderation OTP",
-        "technologies": ["React", "Sass", "Node.js", "MongoDB"],
-        "description": "Réalisation d'un site de planning pour la modération d'un espace de discussion en ligne.",
-        "features": [
-          "Mise à jour automatique des plannings via API",
-          "Création de plannings automatisée",
-          "Gestion des présences utilisateur (ajout/suppression)",
-          "Backend avec gestion automatique de la base de données",
-          "Interface de gestion pour les administrateurs"
-        ]
-      },
-      {
-        "name": "Moderation OTP",
-        "technologies": ["React", "Sass", "Node.js", "MongoDB"],
-        "description": "Réalisation d'un site de planning pour la modération d'un espace de discussion en ligne. Mise à jour et création des plannings automatique à partir d'une API, possibilité pour les utilisateurs d'indiquer des présences, et de les supprimer. Gestion de la base de données automatisée par le backend.",
-        "features": [
-          "Mise à jour automatique des plannings via API",
-          "Création de plannings automatisée",
-          "Gestion des présences utilisateur (ajout/suppression)",
-          "Backend avec gestion automatique de la base de données"
-        ]
-      }
-    ]
-  }
-  
+  "projects": [
+    {
+      "name": "Moderation OTP",
+      "technologies": ["React", "Sass", "Node.js", "MongoDB"],
+      "description": "Réalisation d'un site de planning pour la modération d'un espace de discussion en ligne.",
+      "features": [
+        "Mise à jour automatique des plannings via API",
+        "Création de plannings automatisée",
+        "Gestion des présences utilisateur (ajout/suppression)",
+        "Backend avec gestion automatique de la base de données",
+        "Interface de gestion pour les administrateurs"
+      ],
+      "backgroundImage": "/assets/projects/moderation-otp.jpg"
+    },
+    {
+      "name": "Moderation OTP",
+      "technologies": ["React", "Sass", "Node.js", "MongoDB"],
+      "description": "Réalisation d'un site de planning pour la modération d'un espace de discussion en ligne. Mise à jour et création des plannings automatique à partir d'une API, possibilité pour les utilisateurs d'indiquer des présences, et de les supprimer. Gestion de la base de données automatisée par le backend.",
+      "features": [
+        "Mise à jour automatique des plannings via API",
+        "Création de plannings automatisée",
+        "Gestion des présences utilisateur (ajout/suppression)",
+        "Backend avec gestion automatique de la base de données"
+      ],
+      "backgroundImage": "/assets/projects/moderation-otp.jpg"
+    }
+  ]
+}
